Revert "Fix: cursor effect on mobile"
This reverts commit e6656bf363df2ad25e38f328fd0b8f03b9f8047a.

--- a/styles/styles.module.sass
+++ b/styles/styles.module.sass
@@ -70,8 +70,3 @@ $secondaryColor: #858585,
     100%
         opacity: 1
         transform: translateX(0)
-
-// Medium(md) Breakpoint
-@media (max-width: 768px)
-    .cursor
-        visibility: hidden
